tools/fleet/fixtures/packets/invalid/unknown-branch.case
source=valid-work.packet
mutation=set Branch to UNKNOWN
expected=invalid
